--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -36,11 +36,12 @@ a:hover {
   border-style: solid;
 }
 
-input[type="file"] {
+input[type='file'] {
   margin-top: 20px;
 }
 
 .progress-bar {
+  animation: progress-bar-stripes 1s linear infinite;
   background-size: 1rem 1rem;
   background-image: linear-gradient(
     45deg,
@@ -52,7 +53,6 @@ input[type="file"] {
     transparent 75%,
     transparent
   );
-  animation: progress-bar-stripes 1s linear infinite;
 }
 
 .music-bg {
