refactor: base button

--- a/src/assets/utils/_variable.scss
+++ b/src/assets/utils/_variable.scss
@@ -11,3 +11,10 @@ $bg-cyan-700: rgb(14, 116, 144);
 $bg-cyan-800: rgb(21, 94, 117);
 $bg-cyan-900: rgb(22, 78, 99);
 $bg-cyan-950: rgb(8, 51, 68);
+
+// gray scale
+$gray-500: rgb(107, 114, 128);
+
+// border-radius
+$rounded: 0.25rem;
+$rounded-full: 50px;
